<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF7FF"
    android:orientation="vertical"
    tools:context=".First">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/top" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help2"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/one"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        >
        <TextView
            android:id="@+id/one1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kta"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/one2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"        android:background="@drawable/button"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:id="@+id/tow"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        >
        <TextView
            android:id="@+id/tow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dalilk"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details2"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/three"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        >
        <TextView
            android:id="@+id/three1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>